# R-Type_Epitech

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AddGitSubmodule.cmake  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  OLD_README.md  README.md
.github/workflows/: ga-compilation.yml  ga-linter.yml
Client/: CMakeLists.txt
Client/includes/: Game.hpp  PrinterSystem.hpp
Client/src/: Game.cpp  PrinterSystem.cpp  main.cpp
Client/tests/: hello_test.cpp
Server/: CMakeLists.txt
Server/includes/: Lobby.hpp  LobbyManager.hpp  Server.hpp
Server/src/: Lobby.cpp  LobbyManager.cpp  Server.cpp  main.cpp
docs/: CPackConfig.cmake  CPackSourceConfig.cmake  modules.rst  rfc69007.txt
docs/Client/: clientTests[1]_include.cmake
docs/Server/: serverTests[1]_include.cmake
docs/libs/ECS/: ecsTests[1]_include.cmake
docs/libs/Network/: networkTests[1]_include.cmake
docs/libs/SDL2/: sdl2-config  sdl2.pc
docs/libs/SDL2/include-config-/: SDL_config.h
docs/libs/sdl2/: SDL2.spec  cmake_uninstall.cmake
docs/libs/sdl2/include/: SDL_revision.h
libs/ECS/: CMakeLists.txt
libs/ECS/includes/: CleanSystem.hpp  ComputerComponent.hpp  Entity.hpp  IgnoreComponent.hpp  Info.hpp  Initializer.hpp  Registry.hpp  SerializeMapCreator.hpp  SparseArray.hpp  TypeMapCreator.hpp
libs/ECS/includes/components/: CoordsComponent.hpp  DestroyableComponent.hpp  EnMvmtComponent.hpp  FireComponent.hpp  LazerComponent.hpp  LifeComponent.hpp  MvmtComponent.hpp  ObstacleComponent.hpp  ObtainableComponent.hpp  PositionComponent.hpp  RectComponent.hpp  ShootComponent.hpp  TextureComponent.hpp  TripleShotComp.hpp
libs/ECS/includes/systems/: BgSystem.hpp  BossMvSystem.hpp  CollideSystem.hpp  DestroySystem.hpp  EnemyShootSystem.hpp  FireSystem.hpp  MoveObstacleSystem.hpp  MvComputerCompsSystem.hpp  ObtainSystem.hpp  RemoveObtainableSystem.hpp  ShipMvDSystem.hpp  ShipMvLSystem.hpp  ShipMvRSystem.hpp  ShipMvUSystem.hpp  ShootSystem.hpp  SpawnBonusSystem.hpp  SpawnBossSystem.hpp  SpawnDesObstSystem.hpp  SpawnEnemyColSystem.hpp  SpawnEnemySystem.hpp  SpawnObstacleSystem.hpp  System.hpp
libs/ECS/src/: CleanSystem.cpp  Entity.cpp  Info.cpp  Initializer.cpp  Registry.cpp  TypeMapCreator.cpp  main.cpp
libs/ECS/src/components/: ComputerComponent.cpp  CoordsComponent.cpp  DestroyableComponent.cpp  EnMvmtComponent.cpp  FireComponent.cpp  IgnoreComponent.cpp  LazerComponent.cpp  LifeComponent.cpp  MvmtComponent.cpp  ObstacleComponent.cpp  ObtainableComponent.cpp  PositionComponent.cpp  RectComponent.cpp  ShootComponent.cpp  TextureComponent.cpp  TripleShotComp.cpp
libs/ECS/src/systems/: BgSystem.cpp  BossMvSystem.cpp  CleanSystem.cpp  CollideSystem.cpp  DestroySystem.cpp  EnemyShootSystem.cpp  FireSystem.cpp  MoveObstacleSystem.cpp  MvComputerCompsSystem.cpp  ObtainSystem.cpp  RemoveObtainableSystem.cpp  ShipMvDSystem.cpp  ShipMvLSystem.cpp  ShipMvRSystem.cpp  ShipMvUSystem.cpp  ShootSystem.cpp  SpawnBonusSystem.cpp  SpawnBossSystem.cpp  SpawnDesObstSystem.cpp  SpawnEnemyColSystem.cpp  SpawnEnemySystem.cpp  SpawnObstacleSystem.cpp
libs/ECS/tests/: Entity_test.cpp  Registry_test.cpp  SparseArray_test.cpp  System_test.cpp
libs/Graphics/: CMakeLists.txt
libs/Graphics/includes/: Graphics.hpp  Loader.hpp
libs/Graphics/src/: Graphics.cpp  Loader.cpp
libs/Network/: CMakeLists.txt
libs/Network/includes/: CastMap.hpp  DataNet.hpp  Network.hpp  TCPClient.hpp  UDPClient.hpp  UDPServer.hpp
libs/Network/src/: DataNet.cpp  Network.cpp  TCPClient.cpp  UDPClient.cpp  UDPServer.cpp
libs/Network/tests/: datanet_test.cpp  network_test.cpp
